sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:12: error: ')' expected but 'else' found.
        else{
        ^